syntax = "proto3";
package pb;

option go_package = "pkg/transport/pb";

service Media {
  rpc Create(CreateRequest) returns (MediaMessage) {}
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Get(GetRequest) returns (MediaMessage) {}
  rpc Update(UpdateRequest) returns (MediaMessage) {}
  rpc Delete(DeleteRequest) returns (Empty) {}
}

message MediaMessage {
  string id = 1;
  string title = 2;
  string displayName = 3;
  string description = 4;
  string userID = 5;
  string authorID = 6;
  string publishDate = 7;
  string mediaType = 8;
  string createTime = 9;
  string updateTime = 10;
}

/* Body */
message CreateRequest {
  string title = 1;
  string displayName = 2;
  string description = 3;
  string userID = 4;
  string authorID = 5;
  string publishDate = 6;
  string mediaType = 7;
}

message ListRequest {
  string pageToken = 1;
  string pageSize = 2;
  map<string, string> filterParams = 3;
}

message ListResponse {
  repeated MediaMessage authors = 1;
  string nextPageToken = 2;
}

message GetRequest {
  string id = 1;
}

message UpdateRequest {
  string id = 1;
  string title = 2;
  string displayName = 3;
  string description = 4;
  string userID = 5;
  string authorID = 6;
  string publishDate = 7;
  string mediaType = 8;
}

message DeleteRequest {
  string id = 1;
}

message Empty {}